--- a/index.html
+++ b/index.html
@@ -1,9 +1,16 @@
 <html>
     <head>
-        <title>Famous Cricketer</title>
+        <title>The Famous Cricketer</title>
     </head>
     <body>
         <h1>M.S.Dhoni</h1>
         <p>One of the International cricket players in India</p>
+        <ol>
+            <li>Matches</li>  
+            <li>Runs</li>
+            <li>wickets</li>
+            <li>won</li>
+            <li>lose</li>
+        </ol>
     </body>
 <html>
