--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
         <ol>
             <li>Matches</li>  
             <li>Runs</li>
-            <li>wickets</li>
-            <li>won</li>
-            <li>lose</li>
+            <li>Wickets</li>
+            <li>Won</li>
+            <li>Lose</li>
         </ol>
     </body>
 <html>
