My first webpage

--- a/index.html
+++ b/index.html
@@ -1,16 +1,53 @@
 <html>
     <head>
-        <title>The Famous Cricketer</title>
+        <title>The Famous Crickter</title>
     </head>
     <body>
         <h1>M.S.Dhoni</h1>
         <p>One of the International cricket players in India</p>
+        <hr>
+
+
+        <p> <a href="https://en.wikipedia.org/wiki/MS_Dhoni" target="_blank">Mahendra Singh Dhoni</a>(born 7 July 1981) is an Indian former international cricketer who was captain of the Indian national cricket team in limited-overs formats from 2007 to 2017 and in Test cricket from 2008 to 2014. He led India to three ICC trophies (2007 ICC World Twenty20, 2011 Cricket World Cup and 2013 ICC Champions Trophy), the most for any Indian captain . He is a right handed wicket-keeper batsman;[3] as a batsman, he was most successful in limited overs cricket, scoring over 10,000 runs in One Day Internationals, with a reputation as one of the best finishers in the game.
+
+            In Indian domestic cricket he played for Bihar and Jharkhand Cricket team. He is the captain of Chennai Super Kings (CSK) in the Indian Premier League. He captained the side to championships in the 2010, 2011, 2018 and 2021 editions of IPL league. Also under his captaincy Chennai Super Kings (CSK) Won Champions League T20 two times, in 2010 and 2014.
+            <br><br>
+
+            Dhoni made his ODI debut on 23 December 2004, against Bangladesh in Chittagong,[4] and played his first Test a year later against Sri Lanka.[5] He played his first T20I also a year later against South Africa.[6] In 2007, he took over the ODI captaincy from Rahul Dravid and he also selected as T20I captain of India in this year.[7] In 2008, he was selected as Test Captain.[8] His captaincy record in this format was mixed, successfully leading India to a series win against New Zealand in 2008 and the Border-Gavaskar Trophy (home series in 2010 and 2013) against Australia while losing to Sri Lanka, Australia, England, and South Africa by big margins in away conditions.</p>
         <ol>
-            <li>Matches</li>  
-            <li>Runs</li>
-            <li>Wickets</li>
-            <li>Won</li>
-            <li>Lose</li>
+            <li>Test Matches</li>
+            <li>One DAY International</li>
+            <li>T20</li>
         </ol>
+
+        <hr>
+        <img src="./MS.jpg" width="400px" height="200px">
+
+        <table>
+            <tr>
+                <th>Matches Names</th>
+                <th>Matches</th>
+                <th>Runs Scored</th>
+                <th>Wickets</th>
+            </tr>
+            <tr>
+                <td>Test Matches</td>
+                <td>90</td>
+                <td>4,876</td>
+                <td>0</td>
+            </tr>
+            <tr>
+                <td>One Day International</td>
+                <td>350</td>
+                <td>10,773</td>
+                <td>1</td>
+            </tr>
+            <tr>
+                <td>T20</td>
+                <td>98</td>
+                <td>1,617</td>
+                <td>-</td>
+            </tr>
+        </table>
     </body>
-<html>
+</html>
