--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
             In Indian domestic cricket he played for Bihar and Jharkhand Cricket team. He is the captain of Chennai Super Kings (CSK) in the Indian Premier League. He captained the side to championships in the 2010, 2011, 2018 and 2021 editions of IPL league. Also under his captaincy Chennai Super Kings (CSK) Won Champions League T20 two times, in 2010 and 2014.
             <br><br>
 
-            Dhoni made his ODI debut on 23 December 2004, against Bangladesh in Chittagong,[4] and played his first Test a year later against Sri Lanka.[5] He played his first T20I also a year later against South Africa.[6] In 2007, he took over the ODI captaincy from Rahul Dravid and he also selected as T20I captain of India in this year.[7] In 2008, he was selected as Test Captain.[8] His captaincy record in this format was mixed, successfully leading India to a series win against New Zealand in 2008 and the Border-Gavaskar Trophy (home series in 2010 and 2013) against Australia while losing to Sri Lanka, Australia, England, and South Africa by big margins in away conditions.</p>
+            He announced his retirement from Test format on 30 December 2014,[10] and stepped down as captain of T20Is and ODIs in 2017. On 15 August 2020, Dhoni retired from all formats of international cricket and continues to play in the IPL.</p>
         <ol>
             <li>Test Matches</li>
             <li>One DAY International</li>
-            <li>T20</li>
+            <li>T20</li>      
         </ol>
 
         <hr>
